Fix overlap

--- a/site.css
+++ b/site.css
@@ -44,6 +44,7 @@ a{
 nav{
     margin-right: 3em;
     margin-top: 2em;
+    overflow: auto;
 }
 
 body{
